# openapi.json
@@ -268,6 +268,28 @@
             "description": "Comma-separated outlet UUIDs",
             "name": "outletIds",
             "in": "query"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "Org UUID from client-service"
+            },
+            "required": false,
+            "description": "Org UUID from client-service",
+            "name": "x-org-id",
+            "in": "header"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "User UUID from client-service"
+            },
+            "required": false,
+            "description": "User UUID from client-service",
+            "name": "x-user-id",
+            "in": "header"
           }
         ],
         "responses": {
@@ -293,6 +315,30 @@
         "security": [
           {
             "apiKey": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "Org UUID from client-service"
+            },
+            "required": false,
+            "description": "Org UUID from client-service",
+            "name": "x-org-id",
+            "in": "header"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "User UUID from client-service"
+            },
+            "required": false,
+            "description": "User UUID from client-service",
+            "name": "x-user-id",
+            "in": "header"
           }
         ],
         "responses": {
@@ -329,6 +375,28 @@
             "required": true,
             "name": "outletId",
             "in": "path"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "Org UUID from client-service"
+            },
+            "required": false,
+            "description": "Org UUID from client-service",
+            "name": "x-org-id",
+            "in": "header"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "User UUID from client-service"
+            },
+            "required": false,
+            "description": "User UUID from client-service",
+            "name": "x-user-id",
+            "in": "header"
           }
         ],
         "requestBody": {
@@ -376,6 +444,30 @@
             "apiKey": []
           }
         ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "Org UUID from client-service"
+            },
+            "required": false,
+            "description": "Org UUID from client-service",
+            "name": "x-org-id",
+            "in": "header"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "User UUID from client-service"
+            },
+            "required": false,
+            "description": "User UUID from client-service",
+            "name": "x-user-id",
+            "in": "header"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Low DR outlets",
@@ -412,6 +504,28 @@
             "description": "Campaign UUID",
             "name": "campaignId",
             "in": "query"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "Org UUID from client-service"
+            },
+            "required": false,
+            "description": "Org UUID from client-service",
+            "name": "x-org-id",
+            "in": "header"
+          },
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "description": "User UUID from client-service"
+            },
+            "required": false,
+            "description": "User UUID from client-service",
+            "name": "x-user-id",
+            "in": "header"
           }
         ],
         "responses": {
